feat: add cluedo game (#119)
Added cluedo game and refactored significant portions of the program.